# TRCd

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose-example.yaml
.github/workflows/: rust.yml
docs/: restapi.md  socket.md
src/: main.rs  server.rs  socket_server.rs
src/authentication/: middleware.rs  mod.rs  routes.rs  token.rs  user.rs
src/backend/: mod.rs  server.rs  socket_server.rs
src/database/: database.rs  mod.rs
src/database/minimalist/: mod.rs  storage.rs
src/database/sqlite/: db_sqlite.rs
