[package]
name = "trcd"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
chrono = "0.4.42"
env_logger = "0.11.8"
futures-util = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
