[package]
name = "trcd"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
axum = { version = "0.8.8", features = ["ws", "macros"] }
bcrypt = "0.17.1"
chrono = "0.4.42"
env_logger = "0.11.8"
futures-util = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "migrate", "chrono", "sqlite"] }
tokio = { version = "1.48.0", features = ["full"] }
